<resources>
    <string name="about_store">About Store</string>
    <string name="recently_added_products">Recently added products</string>
    <string name="view_all_title">View All</string>
    <string name="store_rating">Store Rating</string>
    <string name="average_rating">Average Rating</string>
    <string name="make_a_review">Write a review</string>
    <string name="please_login_to_write_reviews">Please login to write a review.</string>
    <string name="title_fragment_policies">Policies</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="recent_feedbacks">Recent Feedbacks</string>
    <string name="view_large_map">View large map</string>
    <string name="empty_about_store">No information available.</string>
    <string name="view_all_x_reviews">View All %1$d reviews.</string>
    <string name="no_policies_added_by_seller">No policies added by Seller.</string>
    <string name="return_policy">Return Policy</string>
    <string name="shipping_policy">Shipping Policy</string>
    <string name="seller_have_no_review_yet">Seller do not have any review yet.</string>
    <string name="top_sellers">Top Sellers</string>
    <string name="x_products">%1$d Product(s).</string>
    <string name="products">Products</string>
    <string name="no_products_still_added_by_the_seller">No Products Still added by the seller</string>
    <string name="seller_reviews">Seller Reviews</string>
    <string name="app_name" translatable="false">Semaai</string>
    <string name="store_name" translatable="false">Semaai</string>
    <string name="deeplinking_host" translatable="false">demo.webkul.com</string>
    <string name="home">Home</string>
    <string name="sourceScreen">Navigation Screen</string>
    <string name="accountScreen">Account Screen</string>
    <string name="powered_by_mobikul">Powered by Semaai</string>
    <string name="facebook_app_id" translatable="false">dummy</string>
    <string name="fb_login_protocol_scheme" translatable="false">dummy</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">dummy</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">dummy</string>
    <string name="signup_text_on_sign_in_page"><![CDATA[New in Semaai. <font color="#6fa088">SIGN-UP</font> now.]]></string>
    <string name="signin_text_on_sign_up_page"><![CDATA[Already have an account.  <font color="#6fa088">SIGN-IN</font> now.]]></string>
    <string name="mobikul" translatable="false">Semaai</string>
    <string name="search">Search</string>
    <string name="search_hint">Search…</string>
    <string name="customer">Customer</string>
    <string name="rate_us">Give Us Review</string>
    <string name="share_app">Share App</string>
    <string name="more">More</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="quantity">quantity</string>
    <string name="choose_an_action">Choose an Action:</string>
    <string name="notification">Notification</string>
    <string name="bag">Bag</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="view_all">View All</string>
    <string name="please_wait">Please wait…</string>
    <string name="press_back_to_exit">Press Back again to Exit</string>
    <string name="cart_ninety_nine_plus">99+</string>
    <string name="cart_nine_plus" translatable="false">9+</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="error">Error</string>
    <string name="error_request_failed">Request Failed, Please try again</string>
    <string name="error_request_timeout">Request Failed, Please try again</string>
    <string name="error_no_network_cross_check_connection">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="error_is_required">is required !</string>
    <string name="error_enter_valid_email">Please Enter a Valid Email!</string>
    <string name="error_password_length_x">must have at least %d characters.</string>
    <string name="error_referral_code_length_x">must have %d characters.</string>
    <string name="invalid_referral_code">Invalid Referral Code</string>
    <string name="error_enter_valid_login_details">Please enter valid login details</string>
    <string name="plese_accept_tnc">Please accept the Terms and Condition.</string>
    <string name="error_login_failure">Login Failure</string>
    <string name="error_cant_perform_operation">Cannot perform this operation at this time!</string>
    <string name="error_fill_req_field">Please fill the required field!</string>
    <string name="error_this_is_a_required_field">This is a required field.</string>
    <string name="error_network_unavailble">Network Unavailable</string>
    <string name="error_please_provide_permission_to_pick_location">Please provide permission to view pick location</string>
    <string name="error_enable_location_of_device">Please enable location of your device</string>
    <string name="error_could_get_location_at_this_point">Could not get your location at this point</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_could_not_add_to_bag_pls_try_again">Could not add item to the bag Please try again later.</string>
    <string name="error_could_not_add_to_wishlist_pls_try_again">Could not add item to the wishlist. Please try again later.</string>
    <string name="error_no_shipping_method_chosen">Please specify shipping method.</string>
    <string name="error_no_payment_method_chosen">Please select your payment method.</string>
    <string name="error_permision_required_to_change_profile_image">Please provide required permission to change profile image</string>
    <string name="error_in_changing_profile_image">Something went wrong in uploading profile image to server. Please try again after some time</string>
    <string name="error_please_login_to_continue">Please login to continue</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_invalid_card_number">Please enter valid card number</string>
    <string name="error_invalid_cvv">Please enter valid cvv number</string>
    <string name="error_invalid_date">Please enter valid date</string>
    <string name="error_invalid_card_details">Please enter valid card details</string>
    <string name="error_order_place">Could not place order at this moment, please try again after some time</string>
    <string name="error_inappropriate_details">Please provide the appropriate details</string>
    <string name="error_default_address_not_found">Default Address not found !</string>
    <string name="error_failed_to_connect_google">Failed to connect Google. Please try again.</string>
    <string name="error_billing_address_not_configured">Billing address is not configured, please select edit to set up your address</string>
    <string name="error_google_sign_in">Could not perform sign in via Google. Please try again.</string>
    <string name="error_twitter_sign_in">Could not perform sign in via Twitter. Please try again.</string>
    <string name="error_in_zip_code">Please enter valid zip code.</string>
    <string name="error_payment_status">Error occurred while fetching payment status.</string>
    <string name="error_order_details">Error occurred while fetching order detail.</string>
    <string name="msg_are_you_sure">Are you sure ?</string>
    <string name="account_created_successfully">Account created…</string>
    <string name="msg_want_to_delete_this_address">You want to delete this address ?</string>
    <string name="question_want_to_empty_bag">You want to empty your bag?</string>
    <string name="question_add_new_address_to_place_order">Add a new address to place order ?</string>
    <string name="message_yes_delete_it">Yes, Delete it</string>
    <string name="message_deleted">Deleted</string>
    <string name="ques_want_to_delete_this_product">Do you want to delete this product?</string>
    <string name="this_is_a_demo_store">This is a demo store.</string>
    <string name="any_orders_placed_from_this_store_will_not_be_honored_or_fullfilled">Any orders placed from this store will not be honored or fulfilled</string>
    <string name="odoo">Odoo</string>
    <string name="title_update_app">Update Available !</string>
    <string name="new_version_available_X">There is a newer version of %s application available, click OK to upgrade now ?</string>
    <string name="remind_later">Remind Later</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Signup</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_or_username">Phone Number/Username</string>
    <string name="write_your_email_here">Write your email here</string>
    <string name="write_your_email_or_username_here">Write your email or username here</string>
    <string name="write_your_phone_number_or_username_here">Write your phone number or username here</string>
    <string name="password">Password</string>
    <string name="write_your_password_here">Write your password here</string>
    <string name="forget_password_heading">Forget Password…?</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="please_enter_your_email_address_below_you_will_receive_a_link_to_reset_your_password_">Please enter your email address below. You will receive a link to reset your password.</string>
    <string name="please_enter_your_phone_number_below_you_will_receive_a_link_to_reset_your_password_">Please enter your phone number below. You will receive a link to reset your password.</string>
    <string name="link_to_resend_login_password_send">Link Send</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="e_g_john_doe">e.g. John Doe</string>
    <string name="login_successful_message">Login Successful</string>
    <string name="skip">Skip</string>
    <string name="use_email_address">Use Email Address</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="account_info">Account Info</string>
    <string name="empty_bag">Your bag is empty</string>
    <string name="add_item_to_your_bag_now">Add item to your bag now</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="wishlist">Wishlist</string>
    <string name="continue_">Continue</string>
    <string name="no_items_yet">No items yet</string>
    <string name="manage_your_wishlist_by_tapping_on_heart_icon">Manage your wishlist by tapping on the Heart icon.</string>
    <string name="favorite">Favorite</string>
    <string name="transaction">Transaction</string>
    <string name="profile">Profile</string>
    <string name="label_wishlist_fragment">WishlistFragment</string>
    <string name="label_orders_list_fragment">OrderListFragment</string>
    <string name="label_notifications_fragment">NotificationFragment</string>
    <string name="label_accounts_fragment">AccountFragment</string>
    <string name="label_empty_fragment">EmptyFragment</string>
    <string name="chat_title">Chat</string>
    <string name="thank_you_for_joining_semaai_toko_tani">Thank you for joining Semaai, help us identify your toko tani so we can give you the best assist for your needs.</string>
    <string name="toko_tani_name">Toko tani name</string>
    <string name="toko_tani_photo">Your Toko Tani photo (optional)</string>
    <string name="name_hint">Example: Andi Baso</string>
    <string name="group_name_hint">Example: Toko tani jaya makmur</string>
    <string name="referral_code_hint">AMLJHK</string>
    <string name="enter_onboarding_referral_code">Enter referral code</string>
</resources>