<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/homeFragmentV1">


    <fragment
        android:id="@+id/wishlistFragment"
        android:name="com.webkul.mobikul.odoo.fragment.WishlistFragment"
        android:label="@string/label_wishlist_fragment"
        tools:layout="@layout/fragment_wishlist">
        <action
            android:id="@+id/action_wishlistFragment_to_homeFragment"
            app:destination="@id/homeFragmentV1" />
    </fragment>

    <fragment
        android:id="@+id/orderListFragment"
        android:name="com.webkul.mobikul.odoo.fragment.OrderListFragment"
        android:label="@string/label_orders_list_fragment"
        tools:layout="@layout/fragment_order_list">

        <action
            android:id="@+id/action_orderListFragment_to_orderFragment"
            app:destination="@id/orderFragment"
            app:popUpTo="@id/orderListFragment"
            app:popUpToInclusive="true" />
    </fragment>


    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.webkul.mobikul.odoo.fragment.NotificationFragment"
        android:label="@string/label_notifications_fragment"
        tools:layout="@layout/fragment_notification">
        <action
            android:id="@+id/action_notificationFragment_to_emptyFragment"
            app:destination="@id/emptyFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.webkul.mobikul.odoo.fragment.AccountFragment"
        android:label="@string/label_accounts_fragment"
        tools:layout="@layout/fragment_account">

        <action
            android:id="@+id/action_accountFragment_to_orderListFragment"
            app:destination="@id/orderListFragment"
            app:popUpTo="@id/homeFragmentV1" />
    </fragment>
    <fragment
        android:id="@+id/emptyFragment"
        android:name="com.webkul.mobikul.odoo.fragment.EmptyFragment"
        android:label="@string/label_empty_fragment"
        tools:layout="@layout/fragment_empty" />
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.webkul.mobikul.odoo.fragment.OrderFragment"
        android:label="OrderFragment"
        tools:layout="@layout/fragment_order">
        <argument
            android:name="orderid"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/homeFragmentV1"
        android:name="com.webkul.mobikul.odoo.ui.home.HomeFragmentV1"
        android:label="HomeFragmentV1">
        <action
            android:id="@+id/action_homeFragmentV1_to_emptyFragment"
            app:destination="@id/emptyFragment" />
    </fragment>


</navigation>