<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            alias="View"
            type="android.view.View" />

        <import type="com.webkul.mobikul.odoo.helper.IntentHelper" />

        <variable
            name="data"
            type="com.webkul.mobikul.odoo.model.customer.wishlist.MyWishListResponse" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/activityBackground"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:visibility="@{data!=null &amp;&amp; data.wishlistCount == 0 ? View.VISIBLE : View.GONE}">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:srcCompat="@drawable/ic_vector_empty_wishlist"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_vector_empty_wishlist" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_items_yet"
                style="@style/Semaai.TextAppearance.Subtitle2.Bold"
                tools:text="@string/empty_bag" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/spacing_generic"
                android:text="@string/manage_your_wishlist_by_tapping_on_heart_icon"
                style="@style/Semaai.TextAppearance.Body2"
                tools:text="@string/add_item_to_your_bag_now" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_generic"
                android:onClick="@{()->IntentHelper.continueShopping(context)}"
                android:padding="@dimen/spacing_normal"
                android:text="@string/start_shopping"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wishlist_product_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{data!=null &amp;&amp; data.wishlistCount == 0 ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_progress_drawable"
            android:indeterminate="true"
            android:visibility="@{data== null ? View.VISIBLE :View.GONE}" />

    </FrameLayout>
</layout>