<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="data"
            type="com.webkul.mobikul.odoo.model.customer.signin.SignInForgetPasswordData" />

        <variable
            name="handler"
            type="com.webkul.mobikul.odoo.handler.customer.ForgotPasswordDialogHandler" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_generic"
            android:text="@string/forgot_your_password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_generic"
            android:text="@string/please_enter_your_phone_number_below_you_will_receive_a_link_to_reset_your_password_" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_generic"
            android:text="@string/phone_number_or_username" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_your_phone_number_or_username_here"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="@={data.username}">

            <requestFocus />
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->handler.forgetPassword()}"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@android:string/ok"
                android:textColor="?attr/colorAccent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->handler.dismissDialog()}"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@android:string/cancel"
                android:textColor="?attr/colorAccent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>